@@ -479,6 +479,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3816. Invalidate work percentage default value should be 0.32f
     instead of 32. (Jing Zhao via suresh)
 
+    HDFS-3707. TestFSInputChecker: improper use of skip.
+    (Colin Patrick McCabe via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
